--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ body, td, th {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
 }
+
+fieldset {
+	margin-bottom: 15px;
+  	padding: 10px;
+}
